5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1575_1326.log
== SUBMITION (2019-03-12 11:38:23) 
-- CODE:
print (R$ 75)
-- EXECUTION TIME:
0.17127
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    print (R$ 75)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:38:48) 
-- CODE:
print(R$ 75)
-- EXECUTION TIME:
0.162539
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    print(R$ 75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:39:03) 
-- CODE:
print(R$ 75)
-- ERROR:
File "XXXX", line 1
    print(R$ 75)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:40:11) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.111936
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:40:50) 
-- CODE:
print(R$40 + R$35=R$75)
-- EXECUTION TIME:
0.133709
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    print(R$40 + R$35=R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:41:55) 
-- CODE:
R$40 + R$ 35= print R$75 
-- EXECUTION TIME:
0.114887
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    R$40 + R$ 35= print R$75 
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:42:23) 
-- CODE:
print(R$75)
-- EXECUTION TIME:
0.136823
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    print(R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:43:27) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.240113
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:44:36) 
-- CODE:
print(40 + 35)
-- EXECUTION TIME:
0.18533
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
